# rusty-vision

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  clippy.yml  publish.yml
examples/: draw-rect.rs
examples/01-basic/: Cargo.toml
examples/01-basic/src/: main.rs
examples/_playground/: Cargo.toml  main.rs
examples/_playground/src/: main.rs
src/: color.rs  error.rs  image.rs  io.rs  lib.rs  main.rs  types.rs
src/codec/: jpeg.rs  mod.rs  png.rs
src/codec/decoders/: mod.rs  png.rs
src/codec/encoders/: mod.rs  png.rs
src/core/: color.rs  image.rs  mod.rs  types.rs
src/core/color/: mod.rs
src/core/geometry/: mod.rs  point.rs  shape.rs
src/core/image/: draw.rs  image_impl.rs  mod.rs  resize.rs  traits.rs
src/core/traits/: draw.rs  resize.rs  rotate.rs
src/error/: mod.rs
src/geometry/: mod.rs  point.rs  shape.rs
src/image/: draw.rs  mod.rs  ops.rs  resize.rs  rotate.rs
src/imgop/: draw.rs  mod.rs  resize.rs
src/io/: reader.rs  writer.rs
src/traits/: draw.rs  mod.rs  resize.rs  rotate.rs
src/types/: image.rs  mod.rs
tests/: geometry.rs  image.rs
