[package]
name = "rusty-vision"
version = "0.0.1"
edition = "2021"
authors = ["Marmik SHah <marmikshah@icloud.com>"]
description = "A basic Image manipulation library."
readme = "README.md"
repository = "https://github.com/marmikshah/rusty-vision"
homepage = "https://github.com/marmikshah/rusty-vision"
keywords = ["image-processing", "computer-vision"]
license = "MIT"
license-file = "LICENSE"

[dependencies]
crc32fast = "1.4.2"
derive-new = "0.7.0"
flate2 = "1.0.33"
log = "0.4.22"
